J'ai crée une route qui permet de changer un usager en admin , ainsi que j'ai ajouté des méthodes dans service et repository
