# src/routes/auth.routes.ts
@@ -1,5 +1,6 @@
 import { Router } from "express";
 import { AuthController } from "../controllers/auth.controller";
+import { authenticateAdmin } from "../middleware/auth.middleware";
 
 export const authRouter = (): Router => {
   const router = Router();
@@ -9,6 +10,7 @@ export const authRouter = (): Router => {
   router.post("/login", authController.login);
   router.post("/logout", authController.logout);
   router.get("/me", authController.me);
+  router.put('/setAdmin/:username',authenticateAdmin, authController.setAdmin);
 
   return router;
 };
